kubernetes/deployment.yml
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "order"
    labels: 
      app: "order"
  spec: 
    selector: 
      matchLabels: 
        app: "order"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "order"
      spec: 
        containers: 
          - 
            name: "order"
            image: "order"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "order"
    labels: 
      app: "order"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "order"
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "delivery"
    labels: 
      app: "delivery"
  spec: 
    selector: 
      matchLabels: 
        app: "delivery"
    replicas: 1
    template: 
      metadata: 
        labels: 
          app: "delivery"
      spec: 
        containers: 
          - 
            name: "delivery"
            image: "delivery"
            ports: 
              - 
                containerPort: 8080
            readinessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 10
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 10
            livenessProbe: 
              httpGet: 
                path: "/actuator/health"
                port: 8080
              initialDelaySeconds: 120
              timeoutSeconds: 2
              periodSeconds: 5
              failureThreshold: 5
---
  apiVersion: "v1"
  kind: "Service"
  metadata: 
    name: "delivery"
    labels: 
      app: "delivery"
  spec: 
    ports: 
      - 
        port: 8080
        targetPort: 8080
    selector: 
      app: "delivery"
---
  apiVersion: "networking.k8s.io/v1"
  kind: "Ingress"
  metadata: 
    name: ""
    annotations: 
      kubernetes.io/ingress.class: "nginx"
  spec: 
    rules: 
      - 
        host: ""
        http: 
          paths: 
            - 
              path: "/orders"
              pathType: "Prefix"
              backend: 
                service: 
                  name: "order"
                  port: 
                    number: 8080
            - 
              path: "/deliveries"
              pathType: "Prefix"
              backend: 
                service: 
                  name: "delivery"
                  port: 
                    number: 8080
